--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -30,7 +30,8 @@ header,
 //Note navbar changes
 .top-nav-collapse {
   //background: linear-gradient(#24355C, #4d71c5);
-  background: linear-gradient(to bottom left, rgba(252, 29, 38, 1), rgba(194, 65, 78, 1) 70%);
+  background: linear-gradient(to bottom left, rgb(110, 175, 252), rgb(80, 87, 194) 70%);
+  opacity: .95;
   //background-color: red;
 }
 
