added new files for blog pages tableau.html, why-be-data-analyst.html, why-choose-business-system-analyst.html employment.html. Also add the scss files involved

--- a/scss/fargo-solution.scss
+++ b/scss/fargo-solution.scss
@@ -3,6 +3,7 @@
 @import "button-hover";
 @import "home";
 @import "services";
+@import "employment";
 @import "publisher";
 @import "industry";
 @import "blog";
@@ -16,7 +17,7 @@
 @import "scrollbar";
 
 
-#homeBody, #servicesBody, #industryBody, #careerBody, #aboutUsBody, #contactUsBody, #privacyBody,#healthBody,#publisherBody,#advertiserBody {
+#homeBody, #servicesBody, #industryBody, #careerBody, #aboutUsBody, #contactUsBody, #privacyBody,#healthBody,#publisherBody,#advertiserBody, #employmentBody {
   font-family: "Open Sans", sans-serif;
   font-size: 14px;
 }
