--- a/scss/_blog.scss
+++ b/scss/_blog.scss
@@ -213,8 +213,8 @@ div.font-weight-bold {
   font-weight: 400;
   font-size: 15px;
 
-  .nav-item{
-    a{
+  .nav-item {
+    a {
       text-decoration: none !important;
     }
   }
@@ -291,9 +291,12 @@ div.container {
     }
   }
 }
-.z-index-1000{
-  z-index: 1000!important;
+
+.z-index-1000 {
+  z-index: 1000 !important;
 }
+
+//Note used to avoid gli
 div.blog-content-heading::before {
   display: block;
   content: " ";
@@ -302,99 +305,5 @@ div.blog-content-heading::before {
   visibility: hidden;
 }
 
-.power-bi-target-links {
-
-  li a {
-    color: orange;
-    font-weight: bold;
-    font-size: 15px;
-    text-decoration: none;
-
-    &:hover {
-      color: orangered;
-      text-decoration: none !important;
-    }
-  }
-}
-
-.zoom img {
-  transition: all .4s linear;
-}
-
-#carouselPrepData {
-
-  .carousel-indicators {
-    li {
-      background-color: orange;
-    }
-  }
-
-  span.carousel-control-prev-icon, span.carousel-control-next-icon {
-    width: 30px;
-    height: 30px;
-    border-radius: 5px;
-    background-color: orange;
-  }
-
-}
-
-.custom-mask-label-p {
-  color: #0ea7a0;
-  font-weight: bold;
-  font-size: 4rem;
-  letter-spacing: .25rem;
-}
-
-p.custom-figure, p.heading-second {
-  color: #4a4a4a;
-  font-size: 1rem;
-  font-weight: bold;
-}
-
-div.power-bi-company-links {
-  z-index: 1000;
-
-  div.row {
-    div.col-md-3:nth-child(2) {
-      border-left: 1px solid grey;
-      border-right: 1px solid grey;
-    }
-
-    div.col-md-3:nth-child(3) {
-      //border-left: 1px solid grey;
-      border-right: 1px solid grey;
-    }
-  }
-
-  @media (max-width: 767px) {
-    div.col-md-3 {
-      border-color: transparent !important;
-    }
-  }
-
-  a {
-    &:hover {
-      opacity: .5;
-    }
-  }
-}
-
-table.power-bi-comparison-table {
-  thead {
-    th {
-      font-weight: bold;
-      letter-spacing: 1px;
-      font-size: 16px;
-    }
-  }
-
-  td {
-    font-weight: 400;
-    font-size: 14px;
-    letter-spacing: 1px;
-  }
-
-  td:nth-child(2), td:nth-child(3), td:nth-child(4) {
-    text-align: center;
-  }
-}
+@import "blog/power_bi_blog";
+@import "blog/tableau_blog";
