--- a/scss/blog/_tableau_blog.scss
+++ b/scss/blog/_tableau_blog.scss
@@ -1,4 +1,4 @@
-#tableau-blog-body{
+#tableauBlogBody{
   div ul{
     margin: 1rem 0 .5rem;
     li a {
@@ -122,22 +122,4 @@ div.tableau-download-links {
       opacity: .8;
     }
   }
-}
-
-.z-index-900 {
-  z-index: 900;
-}
-
-.z-index-901 {
-  z-index: 901;
-}
-
-.z-index-902 {
-  z-index: 902;
-}
-.z-index-903 {
-  z-index: 902;
-}
-.z-index-1001 {
-  z-index: 1001;
 }
