hot fix scroll click for item heading quick change for adding blog item to blog.js change will be reflected in blog.html

--- a/scss/blog/_data-analyst_blog.scss
+++ b/scss/blog/_data-analyst_blog.scss
@@ -63,6 +63,13 @@
   h3 {
     font-weight: bold;
     color: darkgreen;
+    &:before{
+      display: block;
+      content: " ";
+      margin-top: -80px;
+      height: 80px;
+      visibility: hidden;
+    }
   }
 
   h4 {
