added content for salesforce.html fixed a issue with footer.js added template useless data office html page todo: change the footer content add content for ms-office.html and remove useless data asap-fix in next commit proper basic content for office page todo - in a few days blog page add summary and logo for the  new blogs implement the form emails from back end

--- a/scss/_blog.scss
+++ b/scss/_blog.scss
@@ -209,7 +209,8 @@ div.font-weight-bold {
 //}
 //Note below is for each blog details view as html
 #blogBody1, #powerBIBlogBody, #tableauBlogBody,
-#dataAnalystBody,#dataAnalystChoresBody, #jiraBlogBody {
+#dataAnalystBody,#dataAnalystChoresBody, #jiraBlogBody,
+#salesForceBlogBody, #officeBlogBody{
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
   font-size: 15px;
@@ -341,5 +342,7 @@ p>a.contact-us-link, a.contact-us-link {
 @import "blog/power_bi_blog";
 @import "blog/tableau_blog";
 @import "blog/data-analyst_blog";
-@import "blog/jira";
+@import "blog/jira_blog";
+@import "blog/salesforce_blog";
+@import "blog/office_blog";
 
