complete office.html fixed bugs added images and content for teams and power bi

--- a/scss/blog/_office_blog.scss
+++ b/scss/blog/_office_blog.scss
@@ -2,7 +2,8 @@
 
   #carouselOffice, #wordCarousel, #powerPointCarousel,
   #excelCarousel, #visioCarousel, #outlookCarousel,
-  #oneNoteCarousel, #oneDriveCarousel, #accessCarousel {
+  #oneNoteCarousel, #oneDriveCarousel, #accessCarousel,
+  #teamsCarousel, #powerBICarousel {
     .carousel-indicators {
       li {
         background-color: orange;
