changes for career for new job opening hide the button and remove text decoration

--- a/scss/_career.scss
+++ b/scss/_career.scss
@@ -95,7 +95,7 @@ ul.career-ul {
   div.title {
     font-size: 20px;
     font-weight: bold;
-    text-decoration: underline wavy #bc3838;
+    //text-decoration: underline wavy #bc3838;
   }
 
   b {
