--- a/scss/airline.scss
+++ b/scss/airline.scss
@@ -1,5 +1,9 @@
 @import "scrollbar";
 
+body {
+  font-family: Montserrat, sans-serif;
+}
+
 #intro {
   background: url("../img/airlinecall/airline-call-intro.jpg") center no-repeat;
   background-size: cover;
@@ -42,10 +46,6 @@
 
 #aboutUsContainer {
   text-align: center;
-
-  .header, .body {
-    font-family: "Courier New", serif;
-  }
 
   .header {
     font-size: 28px;
@@ -93,7 +93,6 @@
 
 #privacyContainer, #termsContainer {
   color: #181818;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 
   h1 {
     font-size: 32px;
