--- a/scss/airline.scss
+++ b/scss/airline.scss
@@ -36,6 +36,13 @@ body {
   }
 }
 
+.call-btn {
+  font-size: 26px;
+  @media screen and (min-width: 992px) {
+    font-size: 32px;
+  }
+}
+
 #end {
   @extend #intro;
   background: url("../img/airlinecall/airline-call-footer.jpg") center no-repeat;
@@ -106,5 +113,36 @@ body {
 
   span {
     color: #6f6f6f;
+  }
+}
+
+
+@media screen and (min-width: 993px) {
+  .margin-minus-10p {
+    margin-top: -15% !important;
+  }
+  #travelIFrame {
+    min-height: 400px;
+    z-index: 5 !important;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  #travelIFrame {
+    min-height: 400px;
+    z-index: 5 !important;
+  }
+  .call-btn {
+    font-size: 26px !important;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  #travelIFrame {
+    min-height: 350px;
+    z-index: 5 !important;
+  }
+  .call-btn {
+    font-size: 26px !important;
   }
 }
