--- a/scss/reservationPhNum.scss
+++ b/scss/reservationPhNum.scss
@@ -14,22 +14,31 @@ $about-us-link-color: #181818;
 $about-us-link-hover-color: #9c9999;
 
 $call-btn-background-color: #181818;
+$header-color: $orange-darken-2;
 
 @import "basic-web-page";
 @import "scrollbar";
 
 div#end {
   .custom-container {
-    h1, p {
+    h1 {
       background-color: $black;
-      background-image: linear-gradient(90deg, $black, $orange-darken-1);
+      background-image: linear-gradient(180deg, $orange-darken-4, $amber-darken-3);
       background-size: 100%;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       -moz-background-clip: text;
       -moz-text-fill-color: transparent;
     }
+
+    p {
+      color: $white;
+    }
   }
+}
+
+#dealAnimeContainer{
+  color: $orange-darken-3;
 }
 
 header {
@@ -40,8 +49,9 @@ header {
 
 .footer-links {
 
-  font-weight: bolder!important;
-  &:hover{
+  font-weight: bolder !important;
+
+  &:hover {
     color: #fd9544 !important;
     text-decoration: underline #db5d1b;
   }
