bug fix and adjustments

--- a/scss/reservationPhNum.scss
+++ b/scss/reservationPhNum.scss
@@ -1,7 +1,7 @@
 @import "mdb";
 @import "custom-variables";
-$url-intro: "../img/reservation/airline-wings-1920.jpg";
-$url-end: "../img/reservation/airline-inside-1920.jpg";
+$url-intro: "../img/reservation/airline-wings-1920.webp";
+$url-end: "../img/reservation/airline-inside-1920.webp";
 
 $custom-container-bg-color: #181818;
 $custom-container-span-color: #6f6f6f;
